--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Online grocery"
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -23,7 +23,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Orgomart - Grocery Store HTML Template</title>
+    <title>Musu Tropicals</title>
   </head>
   <body class="color-theme-green mont-font loaded">
     <noscript>You need to enable JavaScript to run this app.</noscript>
